style: Fix issue of overflow in Welcome screen in mobile view

--- a/src/pages/Welcome/welcomeStyles.css
+++ b/src/pages/Welcome/welcomeStyles.css
@@ -6,11 +6,7 @@
       rgba(255, 255, 255, 0) 100%
     ),
     #29620f;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  margin: -3.5em 0;
   padding: 3.5em;
   border-radius: 12px;
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1), 0px 4px 8px rgba(0, 0, 0, 0.08),
